GitHub Actions: install 'hub' command explicitly

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -180,6 +180,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - uses: geertvdc/setup-hub@master
 
       - uses: actions/download-artifact@v2
         with:
