GitHub Actions: include stack.yaml contents into the key of the cache

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -127,7 +127,7 @@ jobs:
         name: Cache ~/.stack
         with:
           path: ${{ steps.setup-haskell.outputs.stack-root }}
-          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('toysolver.cabal') }}
+          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('toysolver.cabal', matrix.stack_yaml) }}
           restore-keys: |
             ${{ runner.os }}-${{ matrix.ghc }}-
 
