add ToJSON instances to converters

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -127,6 +127,7 @@ Library
   Exposed: True
   Hs-source-dirs: src
   Build-Depends:
+     aeson >=1.4.2.0 && <2.3,
      array >=0.5,
      -- GHC >=8.6 && <9.11
      base >=4.12 && <4.21,
@@ -372,6 +373,7 @@ Library
      ToySolver.Converter.PB.Internal.Product
      ToySolver.Data.AlgebraicNumber.Graeffe
      ToySolver.Data.Polynomial.Base
+     ToySolver.SAT.Internal.JSON
      ToySolver.SAT.MUS.Base
      ToySolver.SAT.MUS.Deletion
      ToySolver.SAT.MUS.Insertion
