--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -373,6 +373,7 @@ Library
      ToySolver.Converter.PB.Internal.Product
      ToySolver.Data.AlgebraicNumber.Graeffe
      ToySolver.Data.Polynomial.Base
+     ToySolver.Internal.JSON
      ToySolver.SAT.Internal.JSON
      ToySolver.SAT.MUS.Base
      ToySolver.SAT.MUS.Deletion
