add test cases for ToJSON/FromJSON instances of converters

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -924,6 +924,7 @@ Test-suite TestSuite
     Smtlib.Syntax.Syntax
     Smtlib.Syntax.ShowSL
   Build-depends:
+    aeson,
     array,
     base,
     bytestring,
