--- a/stack-ghc-9.8.yaml
+++ b/stack-ghc-9.8.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2024-10-21
+resolver: lts-23.7
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
