--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -122,7 +122,7 @@ source-repository head
 
 Common common-options
   Default-Language: Haskell2010
-  -- GHC-Prof-Options: -auto-all
+  -- GHC-Prof-Options: -fprof-auto
   Build-Depends:
      -- GHC >=9.2 && <9.13
      base >=4.16 && <4.22
