--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -162,6 +162,7 @@ Library
      hashable >=1.2 && <1.6.0.0,
      hashtables,
      heaps,
+     integer-logarithms >=1.0.3.1 && <1.1,
      intern >=0.9.1.2 && <1.0.0.0,
      log-domain,
      -- numLoopState requires loop >=0.3.0
