--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -516,8 +516,6 @@ Executable toyfmf
       text,
       toysolver
 
--- Converters
-
 Executable toyconvert
   Import: exe-options
   Main-is: toyconvert.hs
@@ -545,6 +543,22 @@ Executable toyconvert
   GHC-Options: -rtsopts
   if flag(WithZlib)
     CPP-Options: "-DWITH_ZLIB"
+
+Executable toysolver-check
+  Import: exe-options
+  Main-is: toysolver_check.hs
+  HS-Source-Dirs: app
+  Build-Depends:
+    array,
+    containers,
+    data-default-class,
+    filepath,
+    MIP,
+    optparse-applicative,
+    pseudo-boolean,
+    scientific,
+    text,
+    toysolver
 
 -- Sample Programs
 
