rewrite SAT/MaxSAT/PB log parser and check o-line value and existence of v-line

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -551,6 +551,7 @@ Executable toysolver-check
   HS-Source-Dirs: app
   Build-Depends:
     array,
+    bytestring,
     containers,
     data-default-class,
     filepath,
