--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-22.44
+resolver: lts-23.22
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -46,7 +46,7 @@ extra-deps:
 - logic-TPTP-0.6.0.0
 - finite-field-0.9.0
 - pseudo-boolean-0.1.12.0@sha256:facdc2b5baba904b79ee990bf4d90ea13b71fda3b4e80a1e0f6ff184ba18a8df,2550
-- sign-0.4.4
+- sign-0.4.4@sha256:e97cc7f11e67a99b1eeeefb9d7552ec867bf29d3c8ce11338850c31fc09637fb
 - bytestring-encoding-0.1.2.0
 - MIP-0.2.0.0@sha256:badc69dc1a72453af332175f998a6ba91f03844dea1fd2d4841852e8dcee6ca3,6363
 # Patched version of tasty-th for reading UTF-8 files on non UTF-8 environment.
