use matrix.platform instead of runner.os as a cache key

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -105,9 +105,9 @@ jobs:
         name: Cache ~/.stack
         with:
           path: ${{ steps.setup-haskell.outputs.stack-root }}
-          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('toysolver.cabal', matrix.stack_yaml) }}
+          key: ${{ matrix.platform }}-${{ matrix.ghc }}-${{ hashFiles('toysolver.cabal', matrix.stack_yaml) }}
           restore-keys: |
-            ${{ runner.os }}-${{ matrix.ghc }}-
+            ${{ matrix.platform }}-${{ matrix.ghc }}-
 
       # https://github.com/commercialhaskell/stack/issues/5405
       - name: Clear setup-exe-cache directory
