--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -174,7 +174,7 @@ jobs:
 
       - name: Build artifacts
         id: build-artifact
-        run: stack runhaskell ${{ matrix.stack_args }} --package turtle misc/build_artifacts.hs
+        run: stack runhaskell ${{ matrix.stack_args }} --package turtle -- misc/build_artifacts.hs ${{ matrix.stack_args }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
