--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -137,6 +137,7 @@ jobs:
         timeout-minutes: 10
 
       - name: Check IPASIR DLL dependencies
+        if: ${{ !endsWith(matrix.platform, '-static') }}
         continue-on-error: true
         shell: bash
         run: |
@@ -149,6 +150,7 @@ jobs:
           fi
 
       - name: Test IPASIR DLL using genipaessentials
+        if: ${{ !endsWith(matrix.platform, '-static') }}
         shell: bash
         run: |
           if [[ ${{ matrix.platform }} = "macos-x86_64" ]]; then
