CI: avoid callling stack from build_artifacts.hs

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -183,7 +183,10 @@ jobs:
 
       - name: Build artifacts
         id: build-artifact
-        run: stack runhaskell --package turtle -- misc/build_artifacts.hs ${{ matrix.stack_args }}
+        shell: bash
+        run: |
+          local_install_root=$(stack path --local-install-root ${{ matrix.stack_args }})
+          stack runhaskell --package turtle -- misc/build_artifacts.hs --local-install-root "${local_install_root}"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
